gitops/infrastructure/monitoring/grafana/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: monitoring
spec:
  hosts:
    - "lixiaojun.io"
  gateways:
    - istio-system/demo-gateway
  http:
    - match:
        - uri:
            prefix: "/grafana"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: grafana.monitoring.svc.cluster.local
            port:
              number: 80
